<resources>
    <string name="app_name">Email-Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter Your Email To Get OTP</string>
    <string name="tvWelcome">Enter your Email To Get OTP</string>
    <string name="get_OTP">Get OTP</string>
    <string name="tvFragment2">Please Enter The OTP Recived at Email:</string>
    <string name="Check">Check</string>
    <string name="setPass">Set New Password</string>
    <string name="newPass">Enter New Password</string>
    <string name="confirmNewPass">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="move_back">move back btn to go 1st fragment</string>
</resources>